<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/grayChess">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            >
            <EditText
                android:id="@+id/Player1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/player_one"
                android:inputType="text"
                android:layout_weight="1" />
            <EditText
                android:id="@+id/Player2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/player_two"
                android:inputType="text"
                android:layout_weight="1" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            >

            <EditText
                android:id="@+id/round"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nb_of_rounds"
                android:inputType="number"
                android:layout_weight="1"
                />
            <EditText
                android:id="@+id/Location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/game_location"
                android:layout_weight="1"
                android:inputType="text" />
            <EditText
                android:id="@+id/CodeSecret"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/secret_code"
                android:layout_weight="1"
                android:inputType="text" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            >
            <EditText
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time"
                android:inputType="number"
                android:layout_weight="1"
                />
            <EditText
                android:id="@+id/increment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/increment"
                android:inputType="number"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            >
            <EditText
                android:id="@+id/jlimit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/total_time"
                android:inputType="number"
                android:layout_weight="1"

                />
            <EditText
                android:id="@+id/overTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ext_time"
                android:inputType="number"
                android:layout_weight="1"
                />
            <EditText
                android:id="@+id/overTimeIncrement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ext_increment"
                android:inputType="number"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            >
        <CheckBox
            android:id="@+id/twoTablets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_tablets"
            />
        <CheckBox
            android:id="@+id/enPassant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/en_passant"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            >
            <Button
                android:id="@+id/valider"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:text="@string/action_validate"/>
            <Button
                android:id="@+id/commencer"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:text="@string/action_start_newGame"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>




