<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="equipe3.vintagechess.activity.ChessActivity" >

    <GridView
        android:id="@+id/chessboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:columnWidth="60dp"
        android:gravity="center_horizontal"
        android:horizontalSpacing="0dp"
        android:numColumns="8"
        android:padding="0dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/capturedPiecesView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/gameSettings"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/action_settings"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"/>

            <Button
                android:id="@+id/gameEnd"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/action_endGame"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/turnView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:text="@string/white_turn"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp" />

    </LinearLayout>

</RelativeLayout>